# bakufu

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_ja.md  LICENSE  MANIFEST.in  README.md  README_ja.md  bakufu.yml  pyproject.toml
bakufu/: __init__.py  cli.py  mcp_integration.py  mcp_server.py
bakufu/core/: __init__.py  ai_provider.py  base_types.py  collection_processors.py  config_loader.py  csv_parsing.py  exceptions.py  execution_engine.py  input_processor.py  models.py  step_registry.py  template_engine.py  text_processing.py  unified_input.py  validation.py  workflow_loader.py
bakufu/core/models/: __init__.py  base.py  execution.py  results.py  workflow.py
bakufu/core/progress/: __init__.py  environment.py  manager.py  models.py
bakufu/core/text_steps/: __init__.py  array_aggregate.py  array_filter.py  array_sort.py  array_transform.py  base.py  csv_parse.py  extract_between_marker.py  fixed_split.py  format.py  json_parse.py  markdown_split.py  parse_as_json.py  regex_extract.py  replace.py  select_item.py  split.py  yaml_parse.py
docs/: README.md
docs/01-getting-started/: README.md  configuration.md  first-workflow.md  installation.md
docs/02-user-guide/: README.md  step-types.md  workflow-creation.md
docs/03-features/: README.md  ai-validation.md  collection-operations.md  conditional-operations.md  text-processing-integration.md
docs/04-templates/: README.md  custom-filters.md  custom-functions.md  jinja2-basics.md
docs/05-integrations/: README.md  large-output-control.md  mcp-integration.md
docs/06-examples/: README.md
docs/07-reference/: README.md  ai-auto-continuation.md  ai-parameters.md  cli-commands.md  jinja2-custom-filters.md  jinja2-custom-functions.md  workflow-specification.md
docs/migration/: array-steps-to-jinja2.md
examples/: advanced_csv_processing.yaml  ai-auto-continuation-demo.yml  bakufu-example-setting.yml  conditional_error_handling.yaml  conditional_workflow.yaml  format_step_examples.yaml  large_output_demo.yml  text_processing_new_features.yaml
examples/en/: README.md  run_examples.sh
examples/en/advanced/: ai-parameters-showcase.yml
examples/en/ai-map-call/: README.md  long-text-summarizer.yml  review-sentiment-analysis.yml
examples/en/basic/: code-review.yml  hello-world.yml  mcp-test.yml  text-summarizer.yml
examples/en/collection-operations/: README.md  filter-example.yml  map-example.yml
examples/en/content-creation/: README.md  blog-writer.yml  email-template.yml
examples/en/data-analysis/: README.md  log-analyzer.yml  simple-analytics.yml
examples/en/mcp-integration/: README.md  document-analyzer.yml  file-processor.yml  multi-source-content-creator.yml
examples/en/text-processing/: README.md  advanced-text-processing.yml  basic-text-methods-demo.yml  json-extractor.yml  markdown-processor.yml
examples/en/validation/: README.md  json-schema-validation.yml  output-recovery.yml
examples/ja/: README.md  run_examples.sh
examples/ja/advanced/: ai-parameters-showcase.yml
examples/ja/ai-map-call/: README.md  long-text-summarizer.yml  review-sentiment-analysis.yml
examples/ja/basic/: hello-world.yml  mcp-test.yml  text-summarizer.yml
examples/ja/collection-operations/: README.md  filter-example.yml  map-example.yml
examples/ja/content-creation/: README.md  blog-writer.yml  email-template.yml
examples/ja/data-analysis/: README.md  log-analyzer.yml  simple-analytics.yml
examples/ja/mcp-integration/: README.md  document-analyzer.yml  file-processor.yml  multi-source-content-creator.yml
examples/ja/text-processing/: README.md  advanced-text-processing.yml  basic-text-methods-demo.yml  json-extractor.yml  markdown-processor.yml
examples/ja/validation/: README.md  json-schema-validation.yml  output-recovery.yml
scripts/: sync_to_public.py  validate_package.py
(+4 files in other folders)
